# pyduck-iceberg

./: docker-compose.yml
pyduck_iceberg/: README.md  pyproject.toml
pyduck_iceberg/src/pyduck_iceberg/: __init__.py  cli.py
