[project]
name = "pyduck-iceberg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zero", email = "60701421+0x000-byte@users.noreply.github.com." }
]
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.1",
]

[project.scripts]
iceberg-demo = "pyduck_iceberg.cli:main"

[tool.uv]
dev-dependencies = ["ruff", "pytest"]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]
